auto update role and permission in database